[package]
name = "wicrs_common"
version = "0.2.1"
authors = ["willemml <willem@leit.so>"]
edition = "2018"
license = "GPL-3.0"
description = "Code shared by the wicrs projects."
repository = "https://github.com/wicrs/common"
maintenance = { status = "deprecated" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
sha2 = "0.9"
